[package]
name = "cpu-voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot_vox = "5.1.1"
euc = "0.5.3"
minifb = "0.24.0"
maths-rs = "0.1.14"
glam = "0.23.0"
rayon = "1.7.0"
serde = "1.0.160"
serde_json = "1.0.96"
